<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="200dp"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    android:background="@mipmap/bg_cus">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remind"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/tv_massage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textColor="#000"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"

        >

        <Button
            android:id="@+id/btn_quxiao"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:text="@string/cancel"
            android:textColor="#72CCE3"
            android:layout_marginRight="5dp"
            android:textSize="15sp"
            />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btn_queding"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:text="@string/confirm"
            android:textColor="#72CCE3"
            android:layout_marginLeft="5dp"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>